Forms align general fix

--- a/client/app/less/al/misc.less
+++ b/client/app/less/al/misc.less
@@ -587,7 +587,7 @@
             opacity: 0.9;
         }
         .btn-blue {
-            margin-right: 10px;
+            margin-right: 20px;
         }
         .uib-daypicker .btn-sm{
             width: auto;
@@ -598,7 +598,7 @@
         }
 
         .inputminimal input{
-            padding: 5px 8px 0 8px;
+            padding: 8px 8px 0;
         }
     }
 
