--- a/client/app/less/al/modules/forms.less
+++ b/client/app/less/al/modules/forms.less
@@ -11,14 +11,13 @@
             > label {
                 text-align: left;
                 line-height: 33px;
-                padding-top: 0px;
+                padding-top: 1px;
             }
             > div {
                 height: auto;
                 flex-grow: 1;
             }
             input {
-                line-height: 33px;
                 width: 100%;
                 //height: 100%;
             }
